Added devise gem and created pages controller

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,12 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<% if flash[:notice].present? %>
+	<p class="notice"><%= notice %></p>
+<% end %>
+<% if flash[:alert].present? %>
+	<p class="alert"><%= alert %></p>
+<% end %>
 
 <%= yield %>
 
