--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,14 +7,27 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<% if flash[:notice].present? %>
-	<p class="notice"><%= notice %></p>
-<% end %>
-<% if flash[:alert].present? %>
-	<p class="alert"><%= alert %></p>
-<% end %>
+<nav class="navbar navbar-default navbar-fixed-top">
+	<div class="container">
+		<div class="navbar-header">
+			<%= link_to "Powerup",root_path, class: 'navbar-brand' %>
+		</div>
+		<ul class="nav navbar-nav navbar-right">
+			<li><%= link_to "Sign In", new_user_session_path %></li>
+			<li><%= link_to "Sign Up", new_user_registration_path %></li>
+		</ul>
+	</div>
+</nav>
+<div class="container">
+	<% if flash[:notice].present? %>
+		<p class="notice"><%= notice %></p>
+	<% end %>
+	<% if flash[:alert].present? %>
+		<p class="alert"><%= alert %></p>
+	<% end %>
 
-<%= yield %>
+	<%= yield %>
+</div>
 
 </body>
 </html>
